generating jwt seams to work
